--- a/Final Report/Dan's Tech Appendix.Rmd
+++ b/Final Report/Dan's Tech Appendix.Rmd
@@ -76,7 +76,7 @@ if (!require("rgeos")){
 # Loading and Tidying the Data
 
 ```{r Import Data, echo=FALSE, message=FALSE}
-ATUS_dataset <- import("../Data/atussum_0317.csv", setclass = "tibble")    # import raw summary data as TIBBLE
+ATUS_dataset <- import("atussum_0317.csv", setclass = "tibble")    # import raw summary data as TIBBLE
 ATUS.CPS <- import('atuscps_0317.csv', setclass = "tibble") # import CPS data as TIBBLE for geographical data use
 ```
 
@@ -87,7 +87,7 @@ NA_check <- sum(is.na(ATUS_dataset))
 # Add date from respondent file and change Sex values to M and F instead of 1 and 2
 ATUS_dataset <- mutate(ATUS_dataset, TESEX = ifelse(TESEX == 1, "M", "F"))
 # Create a diary date column based off of the unique ID
-ATUS_dataset$TUDIARYDATE <- as.Date(paste0(substr(ATUS.dataset$TUCASEID, 1, 6), '01'), "%Y%m%d")
+ATUS_dataset$TUDIARYDATE <- as.Date(paste0(substr(ATUS_dataset$TUCASEID, 1, 6), '01'), "%Y%m%d")
 
 
 # A change of variable name in this period leads to missing values so we merge these 2 variables
@@ -125,19 +125,19 @@ ATUS_plotting_data <- filter(ATUS_dataset, month(TUDIARYDATE) != 7)
 
 # Remove columns with -1's, -3's, -4's. We do this instead of removing rows as we would only be left with 1431 observations
 
-#remove full time vs part time as has -1 (66499 times)
+#remove full time vs part time as has -1 (35304 times)
 Data_minus_columns <- select(ATUS_training_data, -one_of("TRDPFTPT"))
-#remove full time vs part time spouse as has -1 (112134 times)
+#remove full time vs part time spouse as has -1 (59784 times)
 Data_minus_columns <- select(Data_minus_columns, -one_of("TRSPFTPT"))
-#remove age of youngest child as has -1 (95663 times)
+#remove age of youngest child as has -1 (51103 times)
 Data_minus_columns <- select(Data_minus_columns, -one_of("TRYHHCHILD"))
-#remove 2 jobs within last 7 days as has -1 (66499 times)
+#remove 2 jobs within last 7 days as has -1 (35304 times)
 Data_minus_columns <- select(Data_minus_columns, -one_of("TEMJOT"))
-#remove enrolled at high school etc as has -1 and -3 and also question about which (76179 and 158595 times)
+#remove enrolled at high school etc as has -1 and -3 and also question about which (40739 and 84653 times)
 Data_minus_columns <- select(Data_minus_columns, -one_of(c("TESCHENR", "TESCHLVL")))
-#remove employment status of spouse as has -1 (82506 times)
+#remove employment status of spouse as has -1 (43791 times)
 Data_minus_columns <- select(Data_minus_columns, -one_of("TESPEMPNOT"))
-#remove weekly earnings as has -1 (78897 times)
+#remove weekly earnings as has -1 (41936 times)
 Data_minus_columns <- select(Data_minus_columns, -one_of("TRERNWA"))
 #remove total hours usually worked per week due to -1 and -4 for vary
 Data_minus_columns <- select(Data_minus_columns, -one_of("TEHRUSLT"))
@@ -304,13 +304,12 @@ part_tu04_sex_TRCHILDNUM_plot <- ggplot(part_sex_weighted_means_data, aes(x=TUYE
 ```
 
 ```{r Suitability of the model, echo=FALSE}
-sex_model_D_squared <- Dsquared(part_tu04_sex_model)
  part_tu04_summary_model_anova <- glm(part_tu04 ~ ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_sex_weighted_means_data, family = quasi(link = "log", variance = "mu^2"),
                               mustart = rep(5, n2))
 ANOVA_for_sex <- anova(part_tu04_summary_model_anova, part_tu04_sex_model, test="F")
 ```
 
-The continuous activity data is non-negative and non-linear. Therefore a suitable model, using **Year** and **Sex** as explanatory variables, is a natural cubic spline GLM with multiplicative errors and log link. In fact it gives a D-squared accuracy score $\approx$ `r round(sex_model_D_squared, 2)`. An F test shows this model is a significant improvement over the same model which does not use **Sex** as a variable, confirming the belief that is has  a significant effect on participation in caring for & helping nonhousehold members. 
+The continuous activity data is non-negative and non-linear. Therefore a suitable model, using **Year** and **Sex** as explanatory variables, is a natural cubic spline GLM with multiplicative errors and log link. An F test shows this model is a significant improvement over the same model which does not use **Sex** as a variable, confirming the belief that is has a significant effect on participation in caring for & helping nonhousehold members. 
 
 The plot below is a graphical interpretation of the model, built on the training data, with the average number of household children for each group of the population displayed as **bars**. 
 
@@ -354,25 +353,26 @@ part_tu04_sex_child_model <- glm(part_tu04 ~ -1 + TRCHILDNUM + TESEX + TESEX:ns(
 
 ```{r Testing the new model, eval=TRUE, echo=FALSE, message=FALSE}
 sex_child_summary_for_t_test <- summary(part_tu04_sex_child_model)
+sex_child_p_value <- coefficients(sex_child_summary_for_t_test)[1,4]
 ```
 The key observation is that, as the table suggested, over the period the participation in caring for & helping non-household members has decreased for both men and women. Building a linear model using **Sex** and **Year** and performing a t-test confirms this. There also appears to be a link between participation in caring for & helping non-household members and the number of household children. Updating the spline curve model to include the number of household children and then again testing this hypothesis with a t-test confirms this is the case. Looking at the graph, fluctuations in the average number of household children, on the whole seem to be followed by but if we check the correlations between them, they show this link is fairly weak (0.65 for Men and 0.49 for Women), suggesting there must be further reasons for this change; possibly not measured in this dataset. 
 
 #Validation
 
 ```{r Validation Data Tidying, echo=FALSE, message=FALSE}
-#remove full time vs part time as has -1 (66499 times)
+#remove full time vs part time as has -1 
 Data_minus_columns_validation <- select(ATUS_validation_data, -one_of("TRDPFTPT"))
-#remove full time vs part time spouse as has -1 ( times)
+#remove full time vs part time spouse as has -1 
 Data_minus_columns_validation <- select(Data_minus_columns_validation, -one_of("TRSPFTPT"))
-#remove age of youngest child as has -1 ( times)
+#remove age of youngest child as has -1 
 Data_minus_columns_validation <- select(Data_minus_columns_validation, -one_of("TRYHHCHILD"))
-#remove 2 jobs within last 7 days as has -1 ( times)
+#remove 2 jobs within last 7 days as has -1 
 Data_minus_columns_validation <- select(Data_minus_columns_validation, -one_of("TEMJOT"))
-#remove enrolled at high school etc as has -1 and -3 and also question about which ( and  times)
+#remove enrolled at high school etc as has -1 and -3 and also question about which 
 Data_minus_columns_validation <- select(Data_minus_columns_validation, -one_of(c("TESCHENR", "TESCHLVL")))
-#remove employment status of spouse as has -1 ( times)
+#remove employment status of spouse as has -1 
 Data_minus_columns_validation <- select(Data_minus_columns_validation, -one_of("TESPEMPNOT"))
-#remove weekly earnings as has -1 ( times)
+#remove weekly earnings as has -1
 Data_minus_columns_validation <- select(Data_minus_columns_validation, -one_of("TRERNWA"))
 #remove total hours usually worked per week due to -1 and -4 for vary
 Data_minus_columns_validation <- select(Data_minus_columns_validation, -one_of("TEHRUSLT"))
@@ -397,14 +397,6 @@ for (i in c(10:16, 18)){
   part_sex_weighted_means_data_validation <- full_join(part_sex_weighted_means_data_validation, summarise_at(Data_minus_columns_year_sex_grouped_validation, vars((paste0("part_tu", i))), funs(weighted.mean(., TUFNWGTP))))
 }
 ```
-
-```{r, echo=FALSE}
-validation_part_tu04_predicted <- predict(part_tu04_sex_model, newdata = part_sex_weighted_means_data_validation, type = "response")
-validation_part_tu04_actual <- part_sex_weighted_means_data_validation$part_tu04
-#sex_model_validation_D_squared <- Dsquared(obs=validation_part_tu04_actual, pred=validation_part_tu04_predicted)
-```
-
-The first step to test the suitability of the original model is to test its accuracy at predicting the proportion of American's who participate in caring for & helping non-household members for the validation data. The model gives an D-squared accuracy score of ` round(sex_model_validation_D_squared)`. Methods to tune parameters for models weren't used for this analysis and therefore it is possible that the model was over-fitting the training data. However, a score of ` round(sex_model_validation_D_squared)` is sufficient to continue with the validation as it appears that the trend is the same as in the EDA.
 
 ```{r Linear model for the plot Validation, eval=TRUE, echo=FALSE, message=FALSE}
 part_tu04_sex_linear_model_validation <- lm(data=part_sex_weighted_means_data_validation, part_tu04~TUYEAR + TESEX)
@@ -432,40 +424,7 @@ part_tu04_sex_plot_validation <- ggplot(part_sex_weighted_means_data_validation,
   geom_ribbon(data = filter(part_tu04_sex_predicted_validation, TESEX =="F"), aes(y=fitted, ymin=ymin, ymax=ymax),alpha=0.1)
 ```
 
-```{r TRCHILDNUM Weighted Means Validation, message=FALSE, echo=FALSE, warning=FALSE}
-sex_weighted_means_TRCHILDNUM_validation <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
-for (i in 1:9){
-  sex_weighted_means_TRCHILDNUM_validation <- full_join(sex_weighted_means_TRCHILDNUM_validation, summarise_at(Data_minus_columns_year_sex_grouped_validation, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
-}
-for (i in c(10:16, 18)){
-  sex_weighted_means_TRCHILDNUM_validation <- full_join(sex_weighted_means_TRCHILDNUM_validation, summarise_at(Data_minus_columns_year_sex_grouped_validation, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
-}
-
-part_sex_weighted_means_TRCHILDNUM_validation <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
-for (i in 1:9){
-  part_sex_weighted_means_TRCHILDNUM_validation <- full_join(part_sex_weighted_means_TRCHILDNUM_validation, summarise_at(Data_minus_columns_year_sex_grouped_validation, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
-}
-for (i in c(10:16, 18)){
-  part_sex_weighted_means_TRCHILDNUM_validation <- full_join(part_sex_weighted_means_TRCHILDNUM_validation, summarise_at(Data_minus_columns_year_sex_grouped_validation, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
-}
-
-part_tu04_sex_TRCHILDNUM_plot_validation <- ggplot(part_sex_weighted_means_data_validation, aes(x=TUYEAR, y=part_tu04)) +
-  geom_bar(data=part_sex_weighted_means_TRCHILDNUM_validation, aes(x=as.numeric(as.character(TUYEAR)), y=TRCHILDNUM, fill=TESEX), stat="identity", position = "dodge", width = 0.8, alpha = 0.3) + 
-  geom_smooth(method = "lm", data=part_sex_weighted_means_TRCHILDNUM_validation, aes(x=as.numeric(as.character(TUYEAR)), y=TRCHILDNUM, col=TESEX), se=FALSE, linetype="dashed", size=1.5) +
-  geom_line(data = part_tu04_sex_predicted_validation, aes(x=TUYEAR, y=0.1*fitted, col=TESEX), size=1.3) +
-  geom_ribbon(data = filter(part_tu04_sex_predicted_validation, TESEX =="M"), aes(y=0.1*fitted, ymin=0.1*ymin, ymax=0.1*ymax),alpha=0.1) +
-  geom_ribbon(data = filter(part_tu04_sex_predicted_validation, TESEX =="F"), aes(y=0.1*fitted, ymin=0.1*ymin, ymax=0.1*ymax),alpha=0.1) +
-  scale_y_continuous(sec.axis = sec_axis(~.*(1/0.1), name = "Spent any time at all caring for & \n helping nonhousehold members (%) \n")) + 
-  scale_x_continuous(breaks = seq(2003,2017,2)) + xlab("Year") + ylab("Average number of children") + labs(color="Sex", fill="Sex") + theme(axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0)), axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0)))
-```
-
-A new model of the same structure (natural spline with log link and multiplicative error) was built It fit the validation data with a D-squared accuracy score of $\approx$ `r round(Dsquared(part_tu04_sex_model_validation))`. A graphical interpretation of this can be seen below.
-
-```{r part_tu04 Sex Plot with Number of Children Validation, message=FALSE, echo=FALSE}
-print(part_tu04_sex_TRCHILDNUM_plot_validation)
-```
-
-Aswell as the fact participation in caring for & helping nonhousehold members has clearly gone down over the period, it is also again appears that the initial thoughts about the link with number of household children, from the EDA, are correct. This can be formally checked with a t-test on an updated model which includes the number of household children. 
+The initial thoughts about the link with number of household children, from the EDA, again needed to be tested. A new model of the same structure (natural spline with log link and multiplicative error) was built. A formal t-test could then be completed on an updat of this model which includes the number of household children. 
 
 ```{r Adding TRCHILDNUM to model Validation, echo=FALSE, message=FALSE}
 Data_minus_columns_year_sex_child_grouped_validation <- Data_minus_columns_validation
@@ -495,9 +454,95 @@ part_tu04_sex_child_model_validation <- glm(part_tu04 ~ -1 + TRCHILDNUM + TESEX 
 
 ```{r Testing the new model Validation, eval=TRUE, echo=FALSE, message=FALSE, fig.height=4}
 sex_child_summary_for_t_test_validation <- summary(part_tu04_sex_child_model_validation)
+sex_child_p_value_validation <- coefficients(sex_child_summary_for_t_test_validation)[1,4]
 ```
 
 With a p-value << 0.05, this test confirms this belief in the validation data. 
+
+```{r Plotting Data Tidying, echo=FALSE, message=FALSE}
+#remove full time vs part time as has -1 
+Data_minus_columns_plotting <- select(ATUS_plotting_data, -one_of("TRDPFTPT"))
+#remove full time vs part time spouse as has -1 
+Data_minus_columns_plotting <- select(Data_minus_columns_plotting, -one_of("TRSPFTPT"))
+#remove age of youngest child as has -1 
+Data_minus_columns_plotting <- select(Data_minus_columns_plotting, -one_of("TRYHHCHILD"))
+#remove 2 jobs within last 7 days as has -1 
+Data_minus_columns_plotting <- select(Data_minus_columns_plotting, -one_of("TEMJOT"))
+#remove enrolled at high school etc as has -1 and -3 and also question about which 
+Data_minus_columns_plotting <- select(Data_minus_columns_plotting, -one_of(c("TESCHENR", "TESCHLVL")))
+#remove employment status of spouse as has -1 
+Data_minus_columns_plotting <- select(Data_minus_columns_plotting, -one_of("TESPEMPNOT"))
+#remove weekly earnings as has -1
+Data_minus_columns_plotting <- select(Data_minus_columns_plotting, -one_of("TRERNWA"))
+#remove total hours usually worked per week due to -1 and -4 for vary
+Data_minus_columns_plotting <- select(Data_minus_columns_plotting, -one_of("TEHRUSLT"))
+```
+
+```{r Sex Weighted Means Plotting, echo=FALSE, message=FALSE}
+Data_minus_columns_year_sex_grouped_plotting <- Data_minus_columns_plotting %>% group_by(TUYEAR, TESEX)
+
+sex_weighted_means_data_plotting <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
+for (i in 1:9){
+  sex_weighted_means_data_plotting <- full_join(sex_weighted_means_data_plotting, summarise_at(Data_minus_columns_year_sex_grouped_plotting, vars((paste0("tu0", i))), funs(weighted.mean(., TUFNWGTP))))
+}
+for (i in c(10:16, 18)){
+  sex_weighted_means_data_plotting <- full_join(sex_weighted_means_data_plotting, summarise_at(Data_minus_columns_year_sex_grouped_plotting, vars((paste0("tu", i))), funs(weighted.mean(., TUFNWGTP))))
+}
+
+part_sex_weighted_means_data_plotting <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
+for (i in 1:9){
+  part_sex_weighted_means_data_plotting <- full_join(part_sex_weighted_means_data_plotting, summarise_at(Data_minus_columns_year_sex_grouped_plotting, vars((paste0("part_tu0", i))), funs(weighted.mean(., TUFNWGTP))))
+}
+for (i in c(10:16, 18)){
+  part_sex_weighted_means_data_plotting <- full_join(part_sex_weighted_means_data_plotting, summarise_at(Data_minus_columns_year_sex_grouped_plotting, vars((paste0("part_tu", i))), funs(weighted.mean(., TUFNWGTP))))
+}
+```
+
+```{r part_tu04 Sex Model Plotting, message=FALSE, echo=FALSE, warning=FALSE}
+n2_plotting <- nrow(part_sex_weighted_means_data_plotting)
+part_tu04_sex_model_plotting <- glm(part_tu04 ~ -1 + TESEX + TESEX:ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_sex_weighted_means_data_plotting, 
+                          family = quasi(link = "log", variance = "mu^2"),
+                          mustart = rep(5, n2_plotting))
+part_tu04_sex_model_data_plotting <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017, length.out = 1000), TESEX=as.factor(c("M", "F"))))
+part_tu04_sex_predicted_plotting <- predict(part_tu04_sex_model_plotting, newdata = part_tu04_sex_model_data_plotting, type = "link", se = TRUE)
+part_tu04_sex_predicted_plotting <-bind_cols(part_tu04_sex_model_data_plotting, 
+                                               as_tibble(data.frame(fitted = exp(part_tu04_sex_predicted_plotting$fit),
+                                                                    ymin = exp(part_tu04_sex_predicted_plotting$fit-1.128*part_tu04_sex_predicted_plotting$se.fit), #80% confidence interval
+                                                                    ymax = exp(part_tu04_sex_predicted_plotting$fit+1.128*part_tu04_sex_predicted_plotting$se.fit))))
+```
+
+```{r TRCHILDNUM Weighted Means Plotting, message=FALSE, echo=FALSE, warning=FALSE}
+sex_weighted_means_TRCHILDNUM_plotting <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
+for (i in 1:9){
+  sex_weighted_means_TRCHILDNUM_plotting <- full_join(sex_weighted_means_TRCHILDNUM_plotting, summarise_at(Data_minus_columns_year_sex_grouped_plotting, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
+}
+for (i in c(10:16, 18)){
+  sex_weighted_means_TRCHILDNUM_plotting <- full_join(sex_weighted_means_TRCHILDNUM_plotting, summarise_at(Data_minus_columns_year_sex_grouped_plotting, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
+}
+
+part_sex_weighted_means_TRCHILDNUM_plotting <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
+for (i in 1:9){
+  part_sex_weighted_means_TRCHILDNUM_plotting <- full_join(part_sex_weighted_means_TRCHILDNUM_plotting, summarise_at(Data_minus_columns_year_sex_grouped_plotting, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
+}
+for (i in c(10:16, 18)){
+  part_sex_weighted_means_TRCHILDNUM_plotting <- full_join(part_sex_weighted_means_TRCHILDNUM_plotting, summarise_at(Data_minus_columns_year_sex_grouped_plotting, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
+}
+
+part_tu04_sex_TRCHILDNUM_plot_plotting <- ggplot(part_sex_weighted_means_data_plotting, aes(x=TUYEAR, y=part_tu04)) +
+  geom_bar(data=part_sex_weighted_means_TRCHILDNUM_plotting, aes(x=as.numeric(as.character(TUYEAR)), y=TRCHILDNUM, fill=TESEX), stat="identity", position = "dodge", width = 0.8, alpha = 0.3) + 
+  geom_smooth(method = "lm", data=part_sex_weighted_means_TRCHILDNUM_plotting, aes(x=as.numeric(as.character(TUYEAR)), y=TRCHILDNUM, col=TESEX), se=FALSE, linetype="dashed", size=1.5) +
+  geom_line(data = part_tu04_sex_predicted_plotting, aes(x=TUYEAR, y=0.1*fitted, col=TESEX), size=1.3) +
+  geom_ribbon(data = filter(part_tu04_sex_predicted_plotting, TESEX =="M"), aes(y=0.1*fitted, ymin=0.1*ymin, ymax=0.1*ymax),alpha=0.1) +
+  geom_ribbon(data = filter(part_tu04_sex_predicted_plotting, TESEX =="F"), aes(y=0.1*fitted, ymin=0.1*ymin, ymax=0.1*ymax),alpha=0.1) +
+  scale_y_continuous(sec.axis = sec_axis(~.*(1/0.1), name = "Spent any time at all caring for & \n helping nonhousehold members (%) \n")) + 
+  scale_x_continuous(breaks = seq(2003,2017,2)) + xlab("Year") + ylab("Average number of children") + labs(color="Sex", fill="Sex") + theme(axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0)), axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0)))
+```
+
+```{r part_tu04 Sex Plot with Number of Children Plotting, message=FALSE, echo=FALSE, eval=FALSE}
+print(part_tu04_sex_TRCHILDNUM_plot_plotting)
+```
+
+
 
 
 ```{r, cache=TRUE}
